<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battery Info</string>
    <string name="unknown">-</string>
    <string name="charger_type">Charger type</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_level">Battery level</string>
    <string name="battery_health">Battery health</string>
    <string name="battery_tech">Battery technology</string>
    <string name="battery_temp">Battery temperature</string>
    <string name="battery_voltage">Battery voltage</string>

</resources>
