<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charger_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/chargerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_level"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_health"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_tech"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryTech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_temp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/battery_voltage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

</LinearLayout>